# py-win-mp-exclude

./: README.md  pyproject.toml
src/win_mp_exclude/: __init__.py  api.py  cli.py  gui.py
tests/: test_cli.py  test_gui.py
