[project]
name = "py-win-mp-exclude"
version = "0.2.2"
description = "Manage Microsoft Defender path exclusions from Python, CLI, or GUI."
authors = [{ name = "GGN_2015" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "py-admin-launch>=0.1.3,<0.2.0",
]
keywords = ["windows", "defender", "microsoft-defender", "exclusions", "powershell"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/GGN-2015/py-win-mp-exclude"

[project.scripts]
win-mp-exclude = "win_mp_exclude.cli:main"
py-win-mp-exclude = "win_mp_exclude.cli:main"
win-mp-exclude-gui = "win_mp_exclude.gui:main"
py-win-mp-exclude-gui = "win_mp_exclude.gui:main"

[tool.poetry]
packages = [{ include = "win_mp_exclude", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
